--- a/feature-home-screen/src/main/res/layout/fragment_home_screen.xml
+++ b/feature-home-screen/src/main/res/layout/fragment_home_screen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.HomeScreenFragment">
+    tools:context=".presentation.ui.HomeScreenFragment"
+    tools:background="#171C26">
 
     <TextView
         android:id="@+id/homeScreenTitle"
@@ -14,6 +15,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_margin="16dp"
+        tools:textColor="#FAFAFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/search_background"
+        android:elevation="4dp"
         android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +36,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:iconifiedByDefault="false"
+            android:searchIcon="@drawable/ic_baseline_search_24"
+
             android:queryBackground="@android:color/transparent"
             android:queryHint="Search your notes..."
             android:layout_marginEnd="16dp"
@@ -53,6 +58,18 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search"
+        app:layout_constraintVertical_bias="0.0"
+        app:spanCount="2"
+        tools:listitem="@layout/item_note" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
