--- a/feature-home-screen/src/main/res/layout/item_note.xml
+++ b/feature-home-screen/src/main/res/layout/item_note.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="#444850"
-    android:elevation="4dp"
+    app:cardElevation="1dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="16dp"
 
@@ -18,7 +17,6 @@
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="#fafafa"
             tools:text="Title"
             android:textSize="16sp"
             android:layout_margin="8dp"
@@ -30,7 +28,6 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="#fafafa"
             android:textSize="14sp"
             android:layout_margin="8dp"
             android:maxLines="10"
@@ -46,8 +43,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/notificationImageView"
             app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
-            android:backgroundTint="#444850"
             android:layout_margin="8dp"
+            app:cardElevation="4dp"
             app:cardCornerRadius="8dp">
             <TextView
                 android:id="@+id/labelTextView"
@@ -55,10 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 tools:text="ToDo"
-                android:textColor="#fafafa"
-                android:textSize="12sp"
-
-                 />
+                android:textSize="12sp"/>
         </androidx.cardview.widget.CardView>
 
         <ImageView
