--- a/core-ui/src/main/res/values/colors.xml
+++ b/core-ui/src/main/res/values/colors.xml
@@ -6,11 +6,15 @@
     <color name="yellow">#FEB52B</color>
     <color name="blue">#3369ff</color>
 
+    <color name="white_bg">#f7f7f7</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="searchBackground">#F4E7E7</color>
 
 
 </resources>
