--- a/core-ui/src/main/res/values-night/styles.xml
+++ b/core-ui/src/main/res/values-night/styles.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppSearchViewStyle" parent="Widget.AppCompat.SearchView">
-        <item name="queryBackground">@color/black</item>
+        <item name="queryBackground">@color/searchBackground</item>
+        <item name="android:background">@drawable/search_background</item>
     </style>
 
-    <style name="SearchViewStyle">
-        <item name="android:backgroundTint">@color/black</item>
+    <style name="HeaderText">
+        <item name="android:textSize">@dimen/large_text</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="CardNoteHeaderStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/normal_text</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
