--- a/feature-home-screen/src/main/res/layout/item_note.xml
+++ b/feature-home-screen/src/main/res/layout/item_note.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="1dp"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="16dp"
+    android:layout_margin="@dimen/small_margin"
+    app:cardCornerRadius="@dimen/standard_corner_radius"
+    app:cardElevation="@dimen/card_view_elevation">
 
-    xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="Title"
-            android:textSize="16sp"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/standard_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Title"
+            style="@style/CardNoteHeaderStyle" />
 
         <TextView
             android:id="@+id/descriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_margin="8dp"
-            android:maxLines="10"
+            android:layout_margin="@dimen/standard_margin"
             android:ellipsize="end"
+            android:maxLines="10"
+            android:textSize="@dimen/small_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleTextView"
@@ -40,30 +39,37 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/small_margin"
+            app:cardCornerRadius="@dimen/small_corner_radius"
+            app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/notificationImageView"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
-            android:layout_margin="8dp"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="8dp">
+            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">
+
             <TextView
                 android:id="@+id/labelTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                tools:text="ToDo"
-                android:textSize="12sp"/>
+                android:textStyle="bold"
+                android:textColor="@color/yellow"
+                android:layout_marginStart="@dimen/standard_margin"
+                android:layout_marginEnd="@dimen/standard_margin"
+                android:layout_marginTop="@dimen/small_margin"
+                android:layout_marginBottom="@dimen/small_margin"
+                android:textSize="@dimen/small_text"
+                tools:text="ToDo" />
         </androidx.cardview.widget.CardView>
 
         <ImageView
             android:id="@+id/notificationImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/standard_margin"
+            android:contentDescription="@string/notification"
             android:src="@drawable/ic_notifications"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
-            android:contentDescription="TODO" />
+            app:tint="@color/yellow" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
