Исправление ошибки в макете Home Screen Fragment. Установка Home Screen Fragment в Activity.

--- a/feature-home-screen/src/main/res/layout/fragment_home_screen.xml
+++ b/feature-home-screen/src/main/res/layout/fragment_home_screen.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
                 app:iconifiedByDefault="false"
-                app:queryBackground="null"
+                app:queryBackground="@null"
                 app:queryHint="@string/hint_search"
                 app:searchIcon="@drawable/ic_baseline_search_24" />
 
