--- a/feature-home-screen/src/main/res/layout/fragment_home_screen.xml
+++ b/feature-home-screen/src/main/res/layout/fragment_home_screen.xml
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintVertical_bias="0.0"
         app:spanCount="2"
+        android:padding="8dp"
         tools:listitem="@layout/item_note" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
