--- a/feature-home-screen/src/main/res/layout/item_note.xml
+++ b/feature-home-screen/src/main/res/layout/item_note.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/small_margin"
+    android:clickable="true"
+    app:cardUseCompatPadding="true"
     app:cardCornerRadius="@dimen/standard_corner_radius"
-    app:cardElevation="@dimen/card_view_elevation">
+    app:cardElevation="@dimen/card_view_elevation"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,51 +16,51 @@
 
         <TextView
             android:id="@+id/titleTextView"
+            style="@style/CardNoteHeaderStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/standard_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Title"
-            style="@style/CardNoteHeaderStyle" />
+            tools:text="Title" />
 
         <TextView
             android:id="@+id/descriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:layout_marginBottom="@dimen/standard_margin"
             android:ellipsize="end"
             android:maxLines="10"
             android:textSize="@dimen/small_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleTextView"
+            app:layout_constraintBottom_toTopOf="@id/labelTextView"
             tools:text="@tools:sample/lorem/random" />
 
-        <androidx.cardview.widget.CardView
+        <TextView
+            android:id="@+id/labelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/small_margin"
-            app:cardCornerRadius="@dimen/small_corner_radius"
-            app:cardElevation="4dp"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:layout_marginBottom="@dimen/small_margin"
+            android:textColor="@color/yellow"
+            android:textSize="@dimen/small_text"
+            android:textStyle="bold"
+            android:background="@drawable/label_bg"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/notificationImageView"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">
+            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
+            tools:text="ToDo" />
 
-            <TextView
-                android:id="@+id/labelTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/yellow"
-                android:layout_marginStart="@dimen/standard_margin"
-                android:layout_marginEnd="@dimen/standard_margin"
-                android:layout_marginTop="@dimen/small_margin"
-                android:layout_marginBottom="@dimen/small_margin"
-                android:textSize="@dimen/small_text"
-                tools:text="ToDo" />
-        </androidx.cardview.widget.CardView>
 
         <ImageView
             android:id="@+id/notificationImageView"
@@ -67,9 +69,9 @@
             android:layout_margin="@dimen/standard_margin"
             android:contentDescription="@string/notification"
             android:src="@drawable/ic_notifications"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/labelTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
+            app:layout_constraintTop_toTopOf="@+id/labelTextView"
             app:tint="@color/yellow" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
