--- a/feature-home-screen/src/main/res/layout/item_note_todo.xml
+++ b/feature-home-screen/src/main/res/layout/item_note_todo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/small_margin"
+    app:cardUseCompatPadding="true"
     app:cardCornerRadius="@dimen/standard_corner_radius"
     app:cardElevation="@dimen/card_view_elevation">
 
@@ -27,7 +27,9 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/small_margin"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:textSize="@dimen/small_text"
@@ -40,39 +42,33 @@
             android:id="@+id/todo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/standard_margin"
             tools:itemCount="3"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/labelCV"
+            app:layout_constraintBottom_toTopOf="@id/labelTextView"
             tools:listitem="@layout/item_todo"/>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/labelCV"
+        <TextView
+            android:id="@+id/labelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/small_margin"
-            app:cardCornerRadius="@dimen/small_corner_radius"
-            app:cardElevation="4dp"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:background="@drawable/label_bg"
+            android:paddingStart="8dp"
+            android:paddingTop="4dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="4dp"
+            android:textColor="@color/yellow"
+            android:textSize="@dimen/small_text"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/notificationImageView"
-            app:layout_constraintTop_toBottomOf="@+id/todo">
-
-            <TextView
-                android:id="@+id/labelTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/yellow"
-                android:layout_marginStart="@dimen/standard_margin"
-                android:layout_marginEnd="@dimen/standard_margin"
-                android:layout_marginTop="@dimen/small_margin"
-                android:layout_marginBottom="@dimen/small_margin"
-                android:textSize="@dimen/small_text"
-                tools:text="ToDo" />
-        </androidx.cardview.widget.CardView>
+            app:layout_constraintTop_toBottomOf="@+id/todo"
+            tools:text="ToDo" />
 
         <ImageView
             android:id="@+id/notificationImageView"
@@ -81,9 +77,9 @@
             android:layout_margin="@dimen/standard_margin"
             android:contentDescription="@string/notification"
             android:src="@drawable/ic_notifications"
-            app:layout_constraintBottom_toBottomOf="@+id/labelCV"
+            app:layout_constraintBottom_toBottomOf="@id/labelTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/labelCV"
+            app:layout_constraintTop_toTopOf="@+id/labelTextView"
             app:tint="@color/yellow" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
